--- a/index.html
+++ b/index.html
@@ -67,32 +67,6 @@
 			/><button>Send</button>
 		</form>
 		<script src="/socket.io/socket.io.js"></script>
-		<script>
-			var socket = io();
-
-			var messages = document.getElementById('messages');
-			var form = document.getElementById('form');
-			var input = document.getElementById('input');
-
-			form.addEventListener('submit', function (e) {
-        console.log('submit event occurred');
-				e.preventDefault();
-				if (input.value) {
-					console.log('input value-- ', input.value);
-					socket.emit('chat message', input.value);
-
-					input.value = '';
-				}
-			});
-
-			socket.on('chat message', function (msg) {
-        var chatBoxTitle = document.createElement('h2');
-        chatBoxTitle.textContent = "Battle Chat Messages"
-				var item = document.createElement('li');
-				item.textContent = msg;
-				messages.appendChild(item);
-				window.scrollTo(0, document.body.scrollHeight);
-			});
-		</script>
+		<script src="../ng-battle-chat/src/index.html"></script>
 	</body>
 </html>
